--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,11 +37,12 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  /* outline: 1px solid red */
 }
 
 .main-content {
   flex: 1;
-  padding: 0.2rem;
+  padding: 0rem 0rem 1rem 1rem;
   width: 100%;
   margin: 0;
 }
@@ -178,7 +179,7 @@ h2 {
   margin-top: 2rem;
   width: 100%;
   border: 1px solid var(--border-color);
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: hidden;
 }
 
@@ -415,7 +416,7 @@ td.actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: white;
+  background: rgb(39, 40, 40);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   position: sticky;
   top: 0;
@@ -423,7 +424,7 @@ td.actions {
 }
 
 .nav-brand a {
-  color: #1a1a1a;
+  color: #fff;
   text-decoration: none;
   font-size: 1.5rem;
   font-weight: 700;
@@ -432,7 +433,8 @@ td.actions {
 }
 
 .nav-brand a:hover {
-  color: #4f46e5;
+  color: #fff;
+  opacity: 0.8;
 }
 
 .nav-links {
@@ -442,7 +444,7 @@ td.actions {
 }
 
 .nav-links a {
-  color: #4b5563;
+  color: #fff;
   text-decoration: none;
   font-weight: 500;
   font-size: 0.95rem;
@@ -458,12 +460,13 @@ td.actions {
   left: 0;
   width: 0;
   height: 2px;
-  background: #4f46e5;
+  background: #fff;
   transition: width 0.2s ease;
 }
 
 .nav-links a:hover {
-  color: #4f46e5;
+  color: #fff;
+  opacity: 0.8;
 }
 
 .nav-links a:hover::after {
